Revision history for Perl extension Wx.

0.9929 Sat Apr 8 2017
    - Fix current OSX builds
    - RT:115097 remove encoding pragma
    - RT:120657 for Wx_Exp.pm incomplete
    - RT:105467 Unescaped left brace in regex is deprecated

0.9928 Sun Dec 20 2015
    - Fix memory leak in Wx::Timer

0.9927 Thu Mar 26 2015
    - Fix broken wxWidgets 2.8 builds

0.9926 Tue Mar 10 2015
    - pause indexing fix
    
0.9925 Tue Mar 10 2015
    - pause indexing fix
    
0.9924 Tue Mar 10 2015
    - added wxTimer::StartOnce
    - some missing wxGrid constants added
    - fixed Wx::AUI events broken since wxWidgets 2.9.5
    - rt96136 - added GetContentScaleFactor to Wx::DC && Wx::Window
    - rt99038 - MACOSX_DEPLOYMENT_TARGET comparison fixed in Wx build
    - wxMenuItem::SetBitmap available on OSX
    - added some missing TextEntry methods to wxComboBox
    - rt102269 - fix option handling

0.9923 Mon Mar 31 2014
    - added wxWindow::InitDialog
    - updated wxComboBox::GetSelection
    - build wxWidgets 3.0.0
    - added wxComboBox::Popup() wxComboBox::Dismiss() ( Eric Colson )

0.9922 Wed May 01 2013 
    - added wxCommandLinkButton
    - updates to ID creation methods
    - rt#84633
    - added wxUIActionSimulator
    - wxFindReplaceDialog new return a hash type object
    - wxProgressDialog updates
    - IPC classes object deletion updates
    - wxString conversion UTF-8 only in Unicode builds
    - typemap template missing some specs since 0.9917

0.9921 Sun Apr 14 2013
    - Fix 2.9.4 handling of wxConnection::Execute

0.9919 Sat Apr 13 2013
    - Makefile checks for supported Wx version
    - Fixed wxUSE_DATAVIEWCTRL constant ( rt#84566 )
    - wrapped wxRegionIterator
    - wrapped IPC - wxConnection / wxServer / wxClient

0.9918 Wed Apr 03 2013
    - Added missing GetItemFont / SetItemFont for Wx::ListCtrl
    - Fixed wxFontEnumerator GetEncodings / GetFacenames
                               ( thanks to Marton Papp )
    - Wrapped wxFontEnumerator callbacks
